--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -31,11 +31,13 @@
                         <a onclick="setLanguageEn()">En</a>
                     </div>
                 </div>
-                <div class="logo-admin">
-                    <img class="rounded-circle" th:src="@{/img/view-user.jpg}">
+<!--                <div class="logo-admin">-->
+<!--                    <img class="rounded-circle" th:src="@{/img/view-user.jpg}">-->
+<!--                </div>-->
+                <div class="logout">
+                    <a th:href="${'/management/logout'}" style="color: black">LogOut</a>
                 </div>
             </div>
-            </ul>
         </div>
     </div>
 </header>
