single habit page on admin side

--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="logo-admin">
-                    <img class="rounded-circle" th:src="@{/img/view-user.jpg}">
+                    <img class="rounded-circle" th:src="@{/img/icon_user.png}">
                 </div>
             </div>
             </ul>
