Added saving pagination and sorting. Changes in css

--- a/core/src/main/resources/static/css/header.css
+++ b/core/src/main/resources/static/css/header.css
@@ -482,7 +482,7 @@ header {
     border: solid 1px #ffffff;
 }
 
-.dropdown:hover .dropbtn {
+.dropdown:hover .header{
     background-color: #13aa57;
     color: #ffffff;
     border: solid 1px #ffffff;
