--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -23,7 +23,7 @@
 <!--                </div>-->
 
                 <div class="dropdown" style="position: relative; right: 105px;">
-                    <button class="dropbtn">[[#{greenCity.current.language}]]
+                    <button class="dropbtn header">[[#{greenCity.current.language}]]
                         <i class="fas fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
