--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -600,32 +600,36 @@ table.table .avatar {
     height: 25px;
     background-color: #ffffff;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 0;
     border: solid 1px #ffffff;
 }
 
 .dropdown-content.role {
     display: none;
-    width: 120px;
+    width: 173px;
     height: 60px;
-    border-radius: 5px;
     position: absolute;
     margin-top: 25px;
+    margin-left: -10px;
+    border: 1px solid #CACFD3;
+    border-top: none;
+    border-radius: 0;
 }
 
 .dropdown:hover .dropdown-content.role {
     display: block;
     background-color: #ffffff;
     z-index: 10000;
+    border-radius: 0;
 
 }
 
 .dropdown-content.role a {
     color: #000000;
     text-decoration: none;
-    border-radius: 5px;
     display: block;
     font-weight: normal;
+    border-radius: 0;
 
 }
 
@@ -638,7 +642,7 @@ table.table .avatar {
 
 .dropdown-content.role a:hover {
     color: #ffffff;
-    background-color: #13aa57;
+    background-color: #CACFD3;
 }
 
 .button-container {
@@ -664,7 +668,7 @@ table.table .avatar {
     padding-left: 15px;
     width: 104px;
     height: 26px;
-    background: #CACFD3;
+    background: #9CA7B0;
     border-radius: 4px;
     font-weight: 600;
     font-size: 13px;
@@ -708,11 +712,11 @@ table.table .avatar {
 
 .dropdown-content.userpage input:hover {
     color: #ffffff;
-    background-color: #13aa57;
+    background-color: #9CA7B0;
 }
 
 .dropdown:hover .dropbtn.userpage {
-    background-color: #13aa57;
+    background-color: #CACFD3;
     color: #ffffff;
     border: solid 1px #ffffff;
 }
@@ -747,21 +751,18 @@ table.table .avatar {
     width: 130px;
     height: 25px;
     background-color: #ffffff00;
-    text-align: center;
-    border-radius: 5px;
     border: solid 1px #ffffff00;
 }
 
 .dropdown-content.status {
     display: none;
-    width: 130px;
-    height: 47px;
-    border-radius: 5px;
+    width: 131px;
+    height: 56px;
     position: absolute;
-    margin-top: 25px;
+    margin-top: 30px;
+    border-radius: 0;
 }
 .arrow{
-    background-image: url("/img/arrow-down.svg");
     cursor: pointer;
     width: 12px;
     height: 6px;
@@ -799,6 +800,8 @@ table.table .avatar {
     width: 16px;
     height: 12px;
     float: right;
+    margin-top: 7px;
+    margin-left: 3px;
 }
 
 .table-download-icon {
@@ -949,12 +952,17 @@ table.table .avatar {
     display: block;
     background-color: #ffffff;
     z-index: 10000;
+    width: 185px;
+    height: 60px;
+    margin-left: -11px;
+    border: 1px solid #CACFD3;
+    border-top: 0px solid #CACFD3;
+
 }
 
 .dropdown-content.status a {
     color: #000000;
     text-decoration: none;
-    border-radius: 5px;
     display: block;
     font-weight: normal;
 
@@ -968,8 +976,9 @@ table.table .avatar {
 }
 
 .dropdown-content.status a:hover {
-    color: #ffffff;
-    background-color: #13aa57;
+    color: #000000 !important;
+    background-color: #9CA7B0;
+    border-radius: 0px;
 }
 
 .dropbtn {
@@ -982,15 +991,28 @@ table.table .avatar {
     margin-left: 4.5px;
     color: #9CA7B0;
     text-align: center;
+    box-sizing: border-box;
 }
 
 .dropdown-content.size {
     display: none;
     width: 97px;
-    height: 108px;
+    height: 112px;
     border-radius: 5px;
+    box-sizing: border-box;
     position: absolute;
-    margin-top: 6px;
+    margin-top: 5px;
+    margin-left: -1px;
+    border: solid 1px #336B4C;
+
+
+}
+
+.change_color{
+    filter: invert(44%) sepia(11%) saturate(607%) hue-rotate(164deg) brightness(93%) contrast(80%);
+}
+.dropdown:hover .change_color{
+    filter: invert(32%) sepia(38%) saturate(579%) hue-rotate(94deg) brightness(96%) contrast(83%);
 }
 
 .dropdown:hover .dropdown-content.size {
@@ -1000,30 +1022,38 @@ table.table .avatar {
 }
 
 .dropdown-content.size a {
-    color: #000000;
     text-decoration: none;
     border-radius: 5px;
     display: block;
     font-weight: normal;
     height: 38px;
     text-align: center;
+    padding-top: 6px;
+    box-sizing: border-box;
 }
+
 
 .dropdown.size {
     width: 97px;
     height: 36px;
     text-align: center;
     border-radius: 4px;
-    border: solid 1px #c1c9c9;
+    border: solid 1px #9CA7B0;
     position: relative;
     display: inline-block;
     margin-left: 0 !important;
+    z-index: 5;
+    box-sizing: border-box;
+
+
 }
 
 .dropdown-content.size a:hover {
-    color: #ffffff;
-    background-color: #13aa57;
-    height: 38px;
+    color: #9CA7B0;
+    /*border: solid 1px #9CA7B0;*/
+    background-color: #336B4C;
+    box-sizing: border-box;
+    height: 35px;
     text-align: center;
     padding-bottom: 5px;
 }
@@ -1068,7 +1098,6 @@ table.table .avatar {
     letter-spacing: 0.002em;
     color: #313131;
     padding-top: 40px;
-    margin-bottom: 0;
     margin-bottom: 0;
 }
 
@@ -1320,7 +1349,7 @@ td input[type=search] {
 }
 
 .btn-primary {
-    background-color: #13AA57;
+    background-color: #9CA7B0;
 }
 
 .btn-primary:hover {
@@ -1524,7 +1553,7 @@ button#searchByForUser {
     left: calc(50% - 612px / 2);
     top: calc(50% - 86px / 2 + 10px);
     background: #FFFFFF;
-    border: 1px solid #9CA7B0;
+    border: 1px solid #CACFD3;
     box-sizing: border-box;
     border-radius: 4px;
 }
@@ -1587,4 +1616,53 @@ button#searchByForUser {
     border: 1px dashed #9CA7B0;
     box-sizing: border-box;
     border-radius: 4px;
+}
+.dropdown:hover .dropbtn.size {
+        background: white;
+        color: #9CA7B0;
+}
+a.lightgrey{
+    color: #9CA7B0 !important;
+}
+
+    .dropdown.status:hover .rotate{
+    transform:rotateX(180deg);
+}
+
+.cyan{
+    background-color: #E5F2FF;
+}
+.lightgreen{
+    background-color: #E7F7EE;
+}
+.lightmustard{
+    background-color: #fff7cf;
+}
+.lightpink{
+    background-color: #FCE0DE;
+}
+.lightgreen:hover , .lightpink:hover, .lightmustard:hover,.cyan:hover{
+    background: white ;
+}
+.sorting{
+    right: 15px;
+}
+
+
+.fas.fa-chevron-up{
+    position: relative;
+    left: 70%;
+    filter: invert(66%) sepia(47%) saturate(7431%) hue-rotate(117deg) brightness(93%) contrast(85%);
+
+}
+.fas.fa-chevron-down{
+    position: relative;
+    left: 70%;
+    filter: invert(66%) sepia(47%) saturate(7431%) hue-rotate(117deg) brightness(93%) contrast(85%);
+    transform:rotateX(180deg);
+}
+.sorting{
+   position: relative;
+    left: 60%;
+    filter: invert(44%) sepia(8%) saturate(692%) hue-rotate(164deg) brightness(96%) contrast(93%);
 }
